# Embedded2-Term-Project

./: README.md
embedded/: .gitignore  CMakeLists.txt
embedded/src/: main.cpp
neural/: .gitignore  make_kmodel.py  make_model.py  make_tflite.py  requirements.txt
